--- a/cloud-movie-web/package.json
+++ b/cloud-movie-web/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "amazon-cognito-identity-js": "^5.2.10",
     "aws-sdk": "^2.1181.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
